css fix on solutions page. added gradient background for text visibility

--- a/src/app/landing-page/header/header.component.less
+++ b/src/app/landing-page/header/header.component.less
@@ -1,4 +1,7 @@
 header {
+  background: -moz-linear-gradient(-45deg, rgba(76,76,76,1) 0%, rgba(89,89,89,1) 12%, rgba(102,102,102,1) 25%, rgba(71,71,71,1) 39%, rgba(44,44,44,1) 50%, rgba(0,0,0,1) 51%, rgba(17,17,17,1) 60%, rgba(43,43,43,1) 76%, rgba(28,28,28,1) 91%, rgba(19,19,19,1) 100%) !important; /* FF3.6-15 */
+  background: -webkit-linear-gradient(-45deg, rgba(76,76,76,1) 0%,rgba(89,89,89,1) 12%,rgba(102,102,102,1) 25%,rgba(71,71,71,1) 39%,rgba(44,44,44,1) 50%,rgba(0,0,0,1) 51%,rgba(17,17,17,1) 60%,rgba(43,43,43,1) 76%,rgba(28,28,28,1) 91%,rgba(19,19,19,1) 100%) !important; /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(135deg, rgba(76,76,76,1) 0%,rgba(89,89,89,1) 12%,rgba(102,102,102,1) 25%,rgba(71,71,71,1) 39%,rgba(44,44,44,1) 50%,rgba(0,0,0,1) 51%,rgba(17,17,17,1) 60%,rgba(43,43,43,1) 76%,rgba(28,28,28,1) 91%,rgba(19,19,19,1) 100%) !important; /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   position: absolute;
   bottom: 0;
   left: 0;
@@ -6,11 +9,6 @@ header {
   background-position: center center !important;
   height: 100%;
   width: 100%;
-  -webkit-transform: translate3d(0px, 0px, 0px) translateZ(0);
-  -moz-transform: translate3d(0px, 0px, 0px) translateZ(0);
-  -ms-transform: translate3d(0px, 0px, 0px) translateZ(0);
-  -o-transform: translate3d(0px, 0px, 0px) translateZ(0);
-  transform: translate3d(0px, 0px, 0px) translateZ(0);
   z-index: 1;
 }
 
