--- a/src/app/solutions-page/lists.less
+++ b/src/app/solutions-page/lists.less
@@ -17,3 +17,7 @@ ul{
       font-weight: bold;
     }
 }
+
+body {
+  background: #fff !important;
+}
